<?xml version="1.0"?>
<package format="2">
    <name>yaml_common</name>
    <version>0.1.0</version>
    <description>Utility functions for parsing YAML data</description>

    <author email="nowak@kelo-robotics.com">Walter Nowak</author>

    <maintainer email="nowak@kelo-robotics.com">Walter Nowak</maintainer>
    <maintainer email="sushant.chavan@kelo-robotics.com">Sushant Chavan</maintainer>

    <license>internal</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>geometry_common</depend>

</package>
