<?xml version="1.0"?>
<package format="2">
    <name>yaml_common</name>
    <version>0.1.0</version>
    <description>Utility functions for parsing YAML data</description>

    <author email="nowak@kelo-robotics.com">Walter Nowak</author>
    <author email="sushant.chavan@kelo-robotics.com">Sushant Chavan</author>
    <author email="dharmin.bakaraniya@kelo-robotics.com">Dharmin B.</author>

    <maintainer email="nowak@kelo-robotics.com">Walter Nowak</maintainer>
    <maintainer email="sushant.chavan@kelo-robotics.com">Sushant Chavan</maintainer>

    <license>LGPL/BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>geometry_common</depend>

</package>
