<?xml version="1.0"?>
<package format="3">
    <name>yaml_common</name>
    <version>0.1.0</version>
    <description>Utility functions for parsing YAML data</description>

    <author email="nowak@kelo-robotics.com">Walter Nowak</author>
    <author email="sushant.chavan@kelo-robotics.com">Sushant Chavan</author>
    <author email="dharmingeo@gmail.com">Dharmin B.</author>

    <maintainer email="dharmingeo@gmail.com">Dharmin B.</maintainer>

    <license>LGPL/BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>geometry_common</depend>

    <test_depend>ament_cmake_gtest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
